20040223 TAG: Release-0_6_2-merge-1
20040225 z80/{harness.pl,z80.pl,tests/37.in,tests/37.out}: SCF should copy
	 bits 3 and 5 from the A register, not OR them (thanks, Erik Kunze
	 and Thomas Harte).
20040225 z80/test/37*: split the SCF test into 4, rather than one overly
	 complicated test.
20040225 z80/{z80.pl,z80_macros.h,tests/README,tests/*cb*}: BIT
	 instructions should set bits 3 and 5 only for BIT 3,<arg> and BIT
	 5,<arg> respectively.
20040226 debugger/{breakpoint.[ch],Makefile.am,commandy.y,debugger.[ch]},
	 ui/gtk/{debugger.c,pokefinder.c}: stop the evil multiplexing of
	 the 'value' parameter to debugger_breakpoint_add().
20040226 debugger/{breakpoint.[ch], commandy.y}, ui/gtk/debugger.c: allow
	 masks to be applied before checking for port breakpoints.
20040227 event.c,ui.[ch]: don't display an error message if the same
	 message was displayed within the past second (fixes bug #901023).
20040301 trdos.c: make the TR-DOS read/write functions be no-ops if the
	 TR-DOS ROM is not active (part of patch #874504 from Stuart
	 Brady, but a separate bugfix IMO).
20040301 machine.c,scorpion.[ch],settings-header.pl,settings.{dat,pl},
	 snapshot.c,spec128.c,spectrum.[ch],tape.c,roms/256s-?.rom,
	 z80/z80_ops.c: Scorpion support (rest of patch #874504) (Stuart
	 Brady).
20040301 configure.in: make GTK+ 2.x the default user interface.
20040301 ui/gtk/{gtkinternals.h,gtkui.c,roms.c}: split the ROMs selection
	 dialog into one dialog for each machine.
20040302 ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,roms.c,widget_internals.h}:
	 split the ROMs selection dialog into one dialog for each machine.
20040303 Another change to the peripheral handling code to let each 'read'
	 function determine whether it had a peripheral attached.
20040303 scorpion.c: no need to zero memory in reset function (Stuart
	 Brady).
20040303 lib/tape_scorpion.z80: add Scorpion tape auto-load snapshot
	 (Stuart Brady).
20040305 tc2068.c: make code C89 compatible.