@@ -618,3 +618,6 @@
 20040303 lib/tape_scorpion.z80: add Scorpion tape auto-load snapshot
 	 (Stuart Brady).
 20040305 tc2068.c: make code C89 compatible.
+20040309 pokefinder/pokefinder.[ch],ui/gtk/pokefinder.c: extend the
+	 pokefinder to be able to find bytes which have increased or
+	 decreased since the last check.
